# Livestar

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/livestar/: LivestarWallpaperService.java  MainActivity.java  NativeBridge.java  Settings.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
rust/: Cargo.toml
rust/src/: lib.rs
