[package]
name = "livestar"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib so the Android build produces liblivestar.so for System.loadLibrary().
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
log = "0.4"
android_logger = "0.14"
ndk = "0.9"
raw-window-handle = "0.6"
wgpu = { version = "29.0.3", default-features = false, features = ["vulkan", "gles", "wgsl"] }
pollster = "0.3"

[profile.release]
opt-level = 3
lto = true
